[gd_scene load_steps=4 format=2]

[ext_resource path="res://canion.gd" type="Script" id=1]
[ext_resource path="res://Juego/Proyectiles/proyectil.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/Proyectiles/laserS.ogg" type="AudioStream" id=3]

[node name="canion" type="Node2D"]
script = ExtResource( 1 )
proyectil = ExtResource( 2 )
velocidad_proyectil = 1600

[node name="Positionderecha" type="Position2D" parent="."]

[node name="Positionizquierda" type="Position2D" parent="."]

[node name="DisparoSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="TimerDeEnfriamiento" type="Timer" parent="."]

[connection signal="timeout" from="TimerDeEnfriamiento" to="." method="_on_TimerDeEnfriamiento_timeout"]
